feat(codex): le manuel devient utilisable
Trois défauts, dont un vrai bug.

LE TEXTE ÉTAIT SILENCIEUSEMENT TRONQUÉ. La boucle de rendu s'arrêtait au bas du
panneau et la fin de l'entrée n'existait nulle part — les entrées les plus longues
étaient coupées en pleine phrase, sans indication. Un manuel qui coupe ses propres
phrases n'est pas un manuel un peu juste, c'est un manuel faux. Le texte est désormais
paginé : rien ne se perd, quelle que soit la longueur.

LE CODEX S'ARRÊTAIT AU T2 pendant que le mod allait au T5. Un joueur qui finissait la
partie n'avait jamais lu une ligne sur la Forge, la Faille ou le Gardien — le manuel
couvrait le premier tiers du jeu. 21 entrées ajoutées (T3, T4, T5) : 40 → 61.

IL N'AFFICHAIT AUCUNE RECETTE. Un guide de mod technique sans recette oblige à ouvrir
JEI à côté — donc on n'ouvre pas le guide, et tout le travail d'écriture ne sert à
personne. Les recettes d'établi ET de machine sont maintenant dessinées, lues du
RecipeManager du client : donc ce que le serveur a réellement chargé. Un datapack qui
change une recette change la page, et une recette écartée au chargement n'apparaît pas
— le Codex ne peut pas mentir sur ce point. Les ingrédients à choix multiple défilent
comme dans JEI : figer le premier ferait croire que seul le fer convient là où le mod
accepte aussi le fragment de Custode.

Le reste tient à l'usage. Le panneau faisait 256×182 — la taille d'un coffre — pour
sept lignes lisibles sur un écran qui en offre trente ; il s'adapte maintenant à la
fenêtre. Une RECHERCHE traverse tout le livre, parce qu'avec soixante entrées parcourir
huit catégories à la souris est plus long que d'aller demander sur un wiki. Le clavier
navigue, et Échap remonte d'un niveau au lieu de tout fermer : dans un manuel on sort
d'un article pour revenir au sommaire, pas pour quitter le livre. Une vraie barre de
défilement, des compteurs par catégorie, et les entrées verrouillées portent un cadenas
plutôt qu'un « ??? » qui imitait un titre.

Le re